	3.2.0.1	8/26/2014
				Version bump for BukkitDev re-submission.
	3.2.1	9/27/2014
				Fixes:
					Fixed the locale being initialized twice while using synchronous initialization.
					Fixed metrics submitting locale information before the locale is initialized.
					Fixed metrics submitting locale language as English, even if a different language is being used.
					Fixed metrics submitting the locale version as 10, even if a different version is being used.
					Fixed an error when using the command '/report list claimed priority' with the console.
					Fixed an error when using the command '/report request *'.
					Fixed a NullPointerException when using the request command.
	3.2.2	9/28/2014
				SQLite Fixes:
					Fixed a NullPointerException when a player logs in.
					Fixed multiple NullPointerExceptions when running any command that sets a statistic.
	3.2.3	11/27/2014
				Fixed the respond message saying null reported someone.
	3.2.4	12/24/2014
				Fixed an IllegalArgumentException when players try to alter a claimed report.
	3.2.5	12/26/2014
				Fixed a Spigot specific error when trying to respond to a report where an anonymous player was reported.
	3.2.6	12/31/2014
				Fixed a NullPointerException when trying to respond to a report where the sender or reported player is offline.
	3.2.6.1	10/24/2015
				Changed from Bukkit's Maven repository to Spigot's Maven repository.
				Updated Bukkit API to 1.8.8-R0.1-SNAPSHOT.
	3.2.6.2	3/30/2016
				Updated Bukkit API to 1.9.2-R0.1-SNAPSHOT.
				Updated metrics to R8-SNAPSHOT.
	3.2.7
				New Configuration Options:
					general.messaging.alerts.reportedPlayerLogin.enabled - Enable messaging when a reported player logs in.
                    general.messaging.alerts.reportedPlayerLogin.toPlayer - Enable sending messages to player that a reported player logged in.
                    general.messaging.alerts.reportedPlayerLogin.toConsole - Enable sending messages to the console that a reported player logged in.